# sanskrit-vi-translation

./: .env.example  .gitignore  BENCHMARK_REPORT.md  BENCHMARK_REPORT_COMPARISON.md  BENCHMARK_REPORT_PALI.md  CLAUDE.md  README.md  config.yaml  pyproject.toml  results_benchmark.csv  results_pali_benchmark.csv  serve_vllm.sh
.claude/evals/: add-model.md  (+2 more)
data/: crawled_raw.csv  dhammapada_udanavarga_parallel.csv  pali_vi_dhammapada.csv  pali_vi_dhammapada_18verses.csv  sanskrit_vi_heart_sutra.csv  sanskrit_vi_udanavarga.csv  sanskrit_vi_udanavarga_18verses.csv
results/: BENCHMARK_REPORT.md  BENCHMARK_REPORT_COMPARISON.md  BENCHMARK_REPORT_PALI.md  BENCHMARK_REPORT_SANSKRIT.md  results_benchmark.csv  results_comparison_benchmark.csv  results_pali-vi-dhammapada-18verses_20260124-1842.csv  results_pali-vi-dhammapada_20260124-2049.csv  results_pali_benchmark.csv  results_sanskrit-vi-heart-sutra_20260124-1409.csv  results_sanskrit-vi-udanavarga-18verses_20260124-2020.csv  results_sanskrit_benchmark.csv
sanskrit-vi-translation/: README.md  results_benchmark.csv
scripts/: list_groq_models.py  split_parallel_dataset.py  sync_prompts.py  upload_all_datasets_to_langfuse.py  upload_to_langfuse.py
src/: align_data.py  cache.py  clean_data.py  dataset_loader.py  evaluator.py  llm_client.py  main.py  manual_align.py  observability.py  prompt_manager.py  response_parser.py  run_crawler.py  schemas.py  translator.py  utils.py
tests/: test_prompt_manager.py  test_response_parser.py  test_schemas.py  test_utils.py
vllm_monitoring/: README.md  docker-compose.yml  start.sh
(+76 files in other folders)
